fixes, add social networks

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <center>
 <img src="./icon.svg" width="250px"/>
 <h1>Pannet</h1>
+<h2>The meta of Lens.</h2>
 <h3>The first conglomerate of Lens DeSo products & experiences.</h3>
 <p>In 2011, <a href="https://peeper.com.br" target="_blank">Peeper</a> (now <a href="https://peepzhq.github.io/" target="_blank">Peepz</a>) was in the scratch, and in 2012 it was born. Peepz history is Pannet's history, because without Peeper we wouldn't exist. To do a homage, the umbrella carrying Peepz's siblings, Sociflow, has been renamed to Pannet: to honor <a href="https://danimesq.com/card#favletter" target="_blank">the letter "P"</a> of Peeper (and <a href="https://plasmmer.com/" target="_blank">Plasmmer</a> as a whole).</p>
 <p>The "Pannet" name means "panning out", and "pan" of cooking🥘. Also means "pansocial" <small>(does this word exist?)</small>, because Pannet will be a network holding many social sites in the future. By "net" after "pan", this does also state social shouldn't anymore be social "<b>media</b>", but back into <b>networks</b>: connecting, not divising people nor choosing what they'll see basing on manipulating trends rather than followings.</p>
@@ -24,7 +25,11 @@
 
 <hr/>
 <copyright>
-<small>✨ Site created in Wed Aug 28 2024</small><br>🗘 Last manual update in Wed Jul 17 11:51 2024 -0300.
-<center><!--<a href="https://aragon.plasmmer.com/#/floflis/" target="_blank"><img width="350px" src="img/5d30129fbe8118efde2a8a25_Badge Dark.svg"/></a><br/>-->(c) 2017-2024 Pannet (former Sociflow/<a href="https://peeper.com.br" target="_blank">Peeper</a>) <!--<a href="https://aragon.plasmmer.com/#/floflis/" target="_blank">DAO</a>--> by <a href="https://plasmmer.com/" style="opacity: unset;"><img height="16px" alt="Plasmmer DAO" src="https://plasmmer.com/press/press-kit/img/logotype-plain_black.svg" title="Plasmmer DAO"></a>.</center></copyright>
+<small>✨ Site created in Wed Aug 28 2024</small><br>🗘 Last manual update in Wed Aug 28 23:30 2024 -0300.
+<center><!--<a href="https://aragon.plasmmer.com/#/floflis/" target="_blank"><img width="350px" src="img/5d30129fbe8118efde2a8a25_Badge Dark.svg"/></a><br/>-->(c) 2017-2024 Pannet (former Sociflow/<a href="https://peeper.com.br" target="_blank">Peeper</a>) <!--<a href="https://aragon.plasmmer.com/#/floflis/" target="_blank">DAO</a>--> by <a href="https://plasmmer.com/" style="opacity: unset;"><img height="16px" alt="Plasmmer DAO" src="https://plasmmer.com/press/press-kit/img/logotype-plain_black.svg" title="Plasmmer DAO"></a>.
+
+<p>Our social networks:</p>
+<a href="https://twitter.com/PannetSo" target="_blank">Twitter</a>
+</br><a href="https://github.com/PannetSo" target="_blank">GitHub</a></center></copyright>
 </body>
 </html>
